classDiagram
    class WalletService {
      +GetBalanceAsync(userId)
      +StartTopUpAsync(userId,dto)
      +FinishTopUpAsync(topupId,success)
      +TransferAsync(userId,dto)
      +GetTransactionsAsync(userId,page,size)
    }

    class StatementService {
      +GetPdfAsync(userId,from,to)
      +GetCsvAsync(userId,from,to)
    }

    class RewardsService {
      +GetSummaryAsync(userId)
      +GetCatalogAsync()
      +RedeemAsync(userId,dto)
      +GetHistoryAsync(userId)
    }

    class AdminService {
      +GetPendingKycAsync()
      +ReviewKycAsync(userId,dto,adminId)
      +CreateCampaignAsync(dto,adminId)
      +GetDashboardAsync()
      +GetUsersAsync()
    }

    class WalletDbContext
    class RewardsDbContext
    class AdminAuthDbContext
    class AdminWalletDbContext
    class AdminRewardsDbContext

    WalletService --> WalletDbContext
    StatementService --> WalletDbContext
    RewardsService --> RewardsDbContext
    AdminService --> AdminAuthDbContext
    AdminService --> AdminWalletDbContext
    AdminService --> AdminRewardsDbContext
